--- a/index.html
+++ b/index.html
@@ -2,88 +2,74 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Market Solution Services</title> <!-- Title changed-->
+    <title>Horiseon Market Solution Services</title>
 </head>
 
-<body> 
-    <header> <!-- HEADER tag added-->
+<body>
+    <header> <!-- Refactoring the header tag to enclose elements in a much better and understandable way-->
         <div class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
                 <ul>
-                    <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                    </li>
-                    <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                    </li>
-                    <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                    </li>
+                    <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                    <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                    <li><a href="#social-media-marketing">Social Media Marketing</a></li>
                 </ul>
             </div>
         </div>
-  </header>
+    </header>
   
-    <div src="./assets/images/digital-marketing-meeting.jpg" class="hero" alt="People discussing about a project on a table"> </div> 
-    <!-- Source image adjusted and alt attributes added -->
-  
-    <div class="content">                                                        <!-- ID added to the code so that it can link properly to the content -->
-        <div id="search-engine-optimization" class="search-engine-optimization"> <!--Section elements, alt attributes and figure elements added -->
-            <figure> 
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Brainstorm concepts of SEO (search-engine-optimization) on a paper" /> <!-- Source image adjusted and alt attributes added -->
+    <div class="hero" style="background-image: url('./assets/images/digital-marketing-meeting.jpg')" alt="People discussing about a project on a table"></div>
+    
+    <div class="content">
+        <section id="search-engine-optimization">
+            <figure> <!-- Figure elements for better semantics -->
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Brainstorm concepts of SEO (search-engine-optimization) on a paper">
             </figure>
             <section>
                 <h2>Search Engine Optimization</h2>
                 <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
-                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
-        </div>
+        </section>
         
-        <div id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management">
             <figure>
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop with an image on it"/>
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop with an image on it">
             </figure>
             <section>
                 <h2>Online Reputation Management</h2>
                 <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                internet connection to say whatever they want about your business. Online Reputation Management gives
-                you the control over what potential customers see when they search for your business.
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you control over what potential customers see when they search for your business.
                 </p>
             </section>
-        </div>
+        </section>
 
-        <div id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing">
             <figure>
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media attributes icon on a table"/>
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media attributes icon on a table">
             </figure>
             <section>
                 <h2>Social Media Marketing</h2>
                 <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
-                determine which platforms are suited to your brand, using analytics to find the right markets and
-                increase your lead generation.
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </section>
-        </div>
+        </section>
     </div>
 
-    <aside class="benefits"> <!-- Aside bar tag added -->
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <figure>
-                <img src="./assets/images/lead-generation.png" alt="lead-icon"/> <!-- Alt tag added -->
+                <img src="./assets/images/lead-generation.png" alt="lead-icon">
             </figure>
             <section>
                 <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly
-                to your website.
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </section>
         </div>
@@ -91,12 +77,11 @@
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <figure>
-                <img src="./assets/images/brand-awareness.png" alt="benefit-icon"/> <!-- Alt tag added -->
+                <img src="./assets/images/brand-awareness.png" alt="benefit-icon">
             </figure>
             <section>
                 <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility
-                for your business.
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </section>
         </div>
@@ -104,19 +89,18 @@
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <figure>
-                <img src="./assets/images/cost-management.png" alt="cost-icon"/> <!-- Alt tag added -->
+                <img src="./assets/images/cost-management.png" alt="cost-icon">
             </figure>
             <section>
                 <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer
-                need to advertise your page.
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
             </section>
         </div>
     </aside>
 
-    <footer> <!-- Footer tag added -->
-        <div class="footer"> 
+    <footer> 
+        <div class="footer">
             <section>
                 <h2>Made with ❤️️ by Horiseon</h2>
                 <p>
@@ -125,6 +109,5 @@
             </section>
         </div>
     </footer>
-
 </body>
 </html>
