--- a/index.html
+++ b/index.html
@@ -2,112 +2,101 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Market Solution Services</title>
+    <title>Horiseon Social Solution Services</title>
 </head>
 
 <body>
-    <header> <!-- Refactoring the header tag to enclose elements in a much better and understandable way-->
-        <div class="header">
-            <h1>Hori<span class="seo">seo</span>n</h1>
-            <div>
-                <ul>
-                    <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-                    <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-                    <li><a href="#social-media-marketing">Social Media Marketing</a></li>
-                </ul>
-            </div>
-        </div>
+    <header>
+        <h1>Hori<span class="seo">seo</span>n</h1>
+        <nav>
+            <ul>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+            </ul>
+        </nav>
     </header>
-  
-    <div class="hero" style="background-image: url('./assets/images/digital-marketing-meeting.jpg')" alt="People discussing about a project on a table"></div>
-    
-    <div class="content">
-        <section id="search-engine-optimization">
-            <figure> <!-- Figure elements for better semantics -->
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Brainstorm concepts of SEO (search-engine-optimization) on a paper">
-            </figure>
-            <section>
-                <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-                </p>
-            </section>
-        </section>
-        
-        <section id="online-reputation-management">
-            <figure>
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop with an image on it">
-            </figure>
-            <section>
-                <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you control over what potential customers see when they search for your business.
-                </p>
-            </section>
-        </section>
 
-        <section id="social-media-marketing">
-            <figure>
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media attributes icon on a table">
+    <figure class="hero" alt="group of digital professionals looking at documents around a meeting table"></figure>
+
+    <main class="content">
+        <section id="search-engine-optimization" class="color-block">
+            <figure class="float-left">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="A notebook on a desk with keywords about SEO written down" />
             </figure>
-            <section>
-                <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-                </p>
-            </section>
+            <h2>Search Engine Optimization</h2>
+            <p>
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
+            </p>
         </section>
-    </div>
+        <section id="online-reputation-management" class="color-block">
+            <figure class="float-right">
+                <img src="./assets/images/online-reputation-management.jpg" alt="A professional reviewing a graph with an improved reputation rating on their computer" />
+            </figure>
+            <h2>Online Reputation Management</h2>
+            <p>
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
+            </p>
+        </section>
+        <section id="social-media-marketing" class="color-block">
+            <figure class="float-left">
+                <img src="./assets/images/social-media-marketing.jpg" alt="A marketing team working together around a table on new ideas for social media" />
+            </figure>
+            <h2>Social Media Marketing</h2>
+            <p>
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
+            </p>
+        </section>
+    </main>
 
     <aside class="benefits">
-        <div class="benefit-lead">
+        <section class="benefit-content">
             <h3>Lead Generation</h3>
             <figure>
-                <img src="./assets/images/lead-generation.png" alt="lead-icon">
+                <img src="./assets/images/lead-generation.png" alt="icon of incoming business" />
             </figure>
-            <section>
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-                </p>
-            </section>
-        </div>
-
-        <div class="benefit-brand">
+            <p>
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
+            </p>
+        </section>
+        <section class="benefit-content">
             <h3>Brand Awareness</h3>
             <figure>
-                <img src="./assets/images/brand-awareness.png" alt="benefit-icon">
+                <img src="./assets/images/brand-awareness.png" alt="icon of person with a lightbulb" />
             </figure>
-            <section>
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-                </p>
-            </section>
-        </div>
-
-        <div class="benefit-cost">
+            <p>
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
+            </p>
+        </section>
+        <section class="benefit-content">
             <h3>Cost Management</h3>
             <figure>
-                <img src="./assets/images/cost-management.png" alt="cost-icon">
+                <img src="./assets/images/cost-management.png" alt="icon of clog with coins" />
             </figure>
-            <section>
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-                </p>
-            </section>
-        </div>
+            <p>
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
+            </p>
+        </section>
     </aside>
 
-    <footer> 
-        <div class="footer">
-            <section>
-                <h2>Made with ❤️️ by Horiseon</h2>
-                <p>
-                    &copy; 2019 Horiseon Social Solution Services, Inc.
-                </p>
-            </section>
-        </div>
+    <footer>
+        <h2>Made with ❤️️ by Horiseon</h2>
+        <p>
+            &copy; 2019 Horiseon Social Solution Services, Inc.
+        </p>
     </footer>
 </body>
+
 </html>
+
